--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -15,7 +15,7 @@
 <body class="text-center">
 
 
-<form th:action="@{/authenticateTheUser}" class="dropdown w-25 p-5 mx-auto" method="POST">
+<form th:action="@{/authenticateTheUser}" class="dropdown w-25 p-5 mx-auto" th:method="POST">
 
     <h1 class="h3 mb-3 font-weight-normal"><strong> Please sign in</strong></h1>
     <div class="form-group">
